--- a/Proyecto 1/Proyecto 1.cbp
+++ b/Proyecto 1/Proyecto 1.cbp
@@ -15,6 +15,9 @@
 					<Add option="-g" />
 					<Add directory="CLASES" />
 					<Add directory="iCLASES" />
+					<Add directory="EDD" />
+					<Add directory="../Proyecto 1" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -26,6 +29,9 @@
 					<Add option="-O2" />
 					<Add directory="CLASES" />
 					<Add directory="iCLASES" />
+					<Add directory="EDD" />
+					<Add directory="../Proyecto 1" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -36,12 +42,33 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="CLASES/Album.cpp" />
-		<Unit filename="CLASES/Album.h" />
-		<Unit filename="CLASES/Artista.cpp" />
-		<Unit filename="CLASES/Artista.h" />
-		<Unit filename="CLASES/Song.cpp" />
-		<Unit filename="CLASES/Song.h" />
+		<Unit filename="Clases/Album.cpp" />
+		<Unit filename="Clases/Album.h" />
+		<Unit filename="Clases/Artist.cpp" />
+		<Unit filename="Clases/Artist.h" />
+		<Unit filename="Clases/Playlist.h" />
+		<Unit filename="Clases/Song.cpp" />
+		<Unit filename="Clases/Song.h" />
+		<Unit filename="Clases/playlist.cpp" />
+		<Unit filename="EDD/Cola.cpp" />
+		<Unit filename="EDD/Cola.h" />
+		<Unit filename="EDD/Cubo.cpp" />
+		<Unit filename="EDD/Cubo.h" />
+		<Unit filename="EDD/ListaDoble.cpp" />
+		<Unit filename="EDD/ListaDoble.h" />
+		<Unit filename="EDD/ListaSimple.cpp" />
+		<Unit filename="EDD/ListaSimple.h" />
+		<Unit filename="EDD/NodoC.cpp" />
+		<Unit filename="EDD/NodoC.h" />
+		<Unit filename="EDD/Pila.cpp" />
+		<Unit filename="EDD/Pila.h" />
+		<Unit filename="EDD/arbolbin.cpp" />
+		<Unit filename="EDD/arbolbin.h" />
+		<Unit filename="EDD/hoja.cpp" />
+		<Unit filename="EDD/hoja.h" />
+		<Unit filename="EDD/listadoblecircular.cpp" />
+		<Unit filename="EDD/listadoblecircular.h" />
+		<Unit filename="json.hpp" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
